@@ -37,6 +37,10 @@
 #include <ldns/rr.h>
 #include <sys/time.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 /* opcodes for pkt's */
 enum ldns_enum_pkt_opcode {
 	LDNS_PACKET_QUERY = 0,
@@ -843,5 +847,9 @@ bool ldns_pkt_safe_push_rr_list(ldns_pkt *pkt, ldns_pkt_section sec, ldns_rr_lis
  * \return true: empty, false: not empty
  */
 bool ldns_pkt_empty(ldns_pkt *p);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif  /* LDNS_PACKET_H */
