@@ -23,6 +23,10 @@
 #include <ldns/buffer.h>
 #include <ldns/error.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 /** Maximum length of a dname label */
 #define LDNS_MAX_LABELLEN     63
 /** Maximum length of a complete dname */
@@ -873,5 +877,9 @@ ldns_rr_list_type(const ldns_rr_list *rr_list);
  */
 ldns_rdf *
 ldns_rr_list_owner(const ldns_rr_list *rr_list);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* LDNS_RR_H */
